--- a/ec2/package.yaml
+++ b/ec2/package.yaml
@@ -4,5 +4,5 @@ version: 1.0.0
 description: Dashboards and alert rules for EC2 instances monitored with the AWS integration
 icon:
     name: ec2
-    background: orange
+    background: "#F88D00"
     foreground: white
