--- a/elb/package.yaml
+++ b/elb/package.yaml
@@ -4,5 +4,5 @@ version: 1.0.0
 description: Dashboards and alert rules for elastic load balancers monitored with the AWS integration
 icon:
     name: elastic-lb
-    background: orange
+    background: "#E77C39"
     foreground: white
