--- a/kafka/package.yaml
+++ b/kafka/package.yaml
@@ -4,8 +4,6 @@ version: 1.0.1
 description: Metrics via JMX for Kafka
 instructions_required: true
 icon:
-    name: base
-    background: green
+    name: kafka
+    background: "#006D89"
     foreground: white
-
-
