--- a/ntp/package.yaml
+++ b/ntp/package.yaml
@@ -3,6 +3,4 @@ author: Dataloop.IO
 version: 1.0.0
 description: Monitors time drift on Dataloop agents by comparing system time to pool.ntp.org
 icon:
-    name: base
-    background: black
-    foreground: white
+    name: logo-loop
