--- a/firehose/package.yaml
+++ b/firehose/package.yaml
@@ -3,6 +3,6 @@ author: Dataloop.IO
 version: 1.0.0
 description: Dashboards and alert rules for Firehose streams monitored with the AWS integration
 icon:
-    name: firehose
-    background: orange
+    name: aws
+    background: "#F88D00"
     foreground: white
