--- a/java/package.yaml
+++ b/java/package.yaml
@@ -5,5 +5,5 @@ description: Monitors Java processes on local machine via JMX
 instructions_required: true
 icon:
     name: java
-    background: white
-    foreground: blue
+    background: "#EA6F00"
+    foreground: "#002A39"
