--- a/nginx/package.yaml
+++ b/nginx/package.yaml
@@ -7,6 +7,6 @@ description: Nginx http codes and response times. You will need to follow the in
 instructions_required: true
 icon:
     name: nginx
-    background: green
+    background: "#009639"
     foreground: white
 
