--- a/postgres/package.yaml
+++ b/postgres/package.yaml
@@ -6,5 +6,5 @@ processes:
 description: Postgres availability and performance monitoring. You will need to edit the postgres.py plugin to specify settings.
 icon:
     name: postgres
-    background: blue
+    background: "#336791"
     foreground: white
