--- a/s3/package.yaml
+++ b/s3/package.yaml
@@ -4,5 +4,5 @@ version: 1.0.0
 description: Dashboards and alert rules for s3 buckets monitored with the AWS integration
 icon:
     name: s3
-    background: orange
+    background: "#E05243"
     foreground: white
