--- a/varnish/package.yaml
+++ b/varnish/package.yaml
@@ -7,4 +7,4 @@ description: All of the metrics from the varnishstat command.
 icon:
     name: varnish
     background: black
-    foreground: cornflowerblue
+    foreground: "#0673BD"
