--- a/docker/package.yaml
+++ b/docker/package.yaml
@@ -3,7 +3,7 @@ author: Dataloop.IO
 version: 1.0.0
 processes:
     - /opt/dataloop/embedded/bin/discover.py
-description: This pack requires the dataloop/dataloop-docker container to be started on each docker host.
+description: This pack requires the outlyer/agent auto container to be started on each docker host.
 instructions_required: true
 icon:
     name: docker
